--- a/gb/20/7/14/n12253923.md
+++ b/gb/20/7/14/n12253923.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fobbte3722/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fobbte3722/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fobbte3722/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fobbte3722/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fobbte3722/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fobbte3722/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fobbte3722/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fobbte3722/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>疫情下宅家锻炼 跳绳深蹲燃脂塑身</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/4922658121857368308_664158852-600x400.jpg" />
 <h6>段代利有十年的健身房私人教练经历。（段代利提供）
 </h6>
 <hr>
-	<p>【大纪元2020年07月14日讯】（大纪元记者徐绣惠<ahref="https://github.com/fobbte3722/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>报导）因<ahref="https://github.com/fobbte3722/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>（新冠肺炎、武汉肺炎、COVID-19）疫情影响，南加仍有许多人在家工作，或是尽量避免外出，选择宅家避疫。但大家如果不上公园、健身房运动，在家要怎么自行锻炼呢？拥有十年私人教练经验的段代利表示，只要持之以恒，在家锻炼一样能达到很好的效果。</p>
-<p>锻炼心肺功能最简单的活动是“<ahref="https://github.com/fobbte3722/djy/blob/master/gb/tag/%E8%B7%B3%E7%BB%B3.md#1">跳绳</a>”，段代利表示，在家跳绳比跑步的强度还大，是一个很好的替代运动，且不需要太多的空间，在室内也可以进行。但在家运动前应先做一些简易的伸展运动暖身，避免运动伤害。</p>
-<figure id="attachment_12254002" style="width: 407px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/12-1.jpg"><img class="size-full wp-image-12254002" src="https://i.epochtimes.com/assets/uploads/2020/07/12-1.jpg" alt="" width="407" b="434" /></a><figcaption class="wp-caption-text">段代利示范<ahref="https://github.com/fobbte3722/djy/blob/master/gb/tag/%E6%B7%B1%E8%B9%B2.md#1">深蹲</a>动作。（杨阳／大纪元）</figcaption></figure>
-<p>段代利说，<ahref="https://github.com/fobbte3722/djy/blob/master/gb/tag/%E8%B7%B3%E7%BB%B3.md#1">跳绳</a>是高强度间歇训练（HIIT）的运动，看似简单，但却会产生后燃效应（After-burn Effect），不只运动当下能燃烧脂肪，甚至在运动后仍继续烧脂。但他提醒民众，跳绳时应避免在坚硬的场地，避免冲击力损害关节，跳绳时最好选在缓冲力较佳的草地、木质地板，或在硬地板上铺上垫子、毯子。</p>
-<figure id="attachment_12254006" style="width: 413px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/07/13.jpg"><img class="size-full wp-image-12254006" src="https://i.epochtimes.com/assets/uploads/2020/07/13.jpg" alt="" width="413" b="419" /></a><figcaption class="wp-caption-text">段代利示范箭步蹲动作。（杨阳／大纪元）</figcaption></figure>
-<p>若想增加肌肉耐力，保持体态，段代利推荐“<ahref="https://github.com/fobbte3722/djy/blob/master/gb/tag/%E6%B7%B1%E8%B9%B2.md#1">深蹲</a>”（Squat）。他表示深蹲与卧推、硬举并列为健力三大项训练，但深蹲更易于个人在家进行，也不需要特殊的辅助器具。一般人都认为深蹲是“腿部肌群训练”，但这是一个多关节运动，可以同时让身体各部位活动；若配合不同的方式深蹲，还可达到全身性锻炼。</p>
+	<p>【大纪元2020年07月14日讯】（大纪元记者徐绣惠<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>报导）因<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E8%82%BA%E7%82%8E.md#1">中共肺炎</a>（新冠肺炎、武汉肺炎、COVID-19）疫情影响，南加仍有许多人在家工作，或是尽量避免外出，选择宅家避疫。但大家如果不上公园、健身房运动，在家要怎么自行锻炼呢？拥有十年私人教练经验的段代利表示，只要持之以恒，在家锻炼一样能达到很好的效果。</p>
+<p>锻炼心肺功能最简单的活动是“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B7%B3%E7%BB%B3.md#1">跳绳</a>”，段代利表示，在家跳绳比跑步的强度还大，是一个很好的替代运动，且不需要太多的空间，在室内也可以进行。但在家运动前应先做一些简易的伸展运动暖身，避免运动伤害。</p>
+<figure id="attachment_12254002" aria-describedby="caption-attachment-12254002" style="width: 407px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/12-1.jpg"><img class="size-full wp-image-12254002" src="https://i.epochtimes.com/assets/uploads/2020/07/12-1.jpg" alt="" width="407" b="434" /></a><figcaption id="caption-attachment-12254002" class="wp-caption-text">段代利示范<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B7%B1%E8%B9%B2.md#1">深蹲</a>动作。（段代利提供）</figcaption></figure>
+<p>段代利说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B7%B3%E7%BB%B3.md#1">跳绳</a>是高强度间歇训练（HIIT）的运动，看似简单，但却会产生后燃效应（After-burn Effect），不只运动当下能燃烧脂肪，甚至在运动后仍继续烧脂。但他提醒民众，跳绳时应避免在坚硬的场地，避免冲击力损害关节，跳绳时最好选在缓冲力较佳的草地、木质地板，或在硬地板上铺上垫子、毯子。</p>
+<figure id="attachment_12254006" aria-describedby="caption-attachment-12254006" style="width: 413px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/07/13.jpg"><img class="size-full wp-image-12254006" src="https://i.epochtimes.com/assets/uploads/2020/07/13.jpg" alt="" width="413" b="419" /></a><figcaption id="caption-attachment-12254006" class="wp-caption-text">段代利示范箭步蹲动作。（段代利提供）</figcaption></figure>
+<p>若想增加肌肉耐力，保持体态，段代利推荐“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B7%B1%E8%B9%B2.md#1">深蹲</a>”（Squat）。他表示深蹲与卧推、硬举并列为健力三大项训练，但深蹲更易于个人在家进行，也不需要特殊的辅助器具。一般人都认为深蹲是“腿部肌群训练”，但这是一个多关节运动，可以同时让身体各部位活动；若配合不同的方式深蹲，还可达到全身性锻炼。</p>
 <p>段代利介绍，一次标准的深蹲动作，可以同时锻炼到全身200余个主要肌群。首先将双手平举，髋部缓缓后移蹲下，弯曲双膝和脚踝，此时身体重心置于脚跟，要保持脚跟固定于地面；然后再缓缓站直，这样即完成一组动作。他建议个人在家运动，每组动作可做八次，连续做24次，就能达到很好的锻炼效果。</p>
 <p>若想进一步加强锻炼，还可以做“箭步蹲”：一开始双手下垂，身体保持直立，一条腿向后迈一步，然后下蹲，直到两个膝关节的角度为90度，起身还原，换位进行；若仍想再增加锻炼强度，可以将双手抱在胸前，或是手提哑铃来锻炼。段代利表示，要达到燃脂、塑身的锻炼效果不一定要去健身房，在家一样可以轻松做到。◇</p>
 <p>责任编辑：李欣</p>
@@ -20,36 +20,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/6/27/n12215620.md#1">橙县大公园运动场开放 足球队恢复训练</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/1/n12225212.md#1">久咳、爬坡喘当心肺纤维化 医师教你保养肺功能</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/2/n12226219.md#1">医师推荐增肌运动前3名 强身、增骨密度</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/10/n12247498.md#1">每周2次侧躺抬腿 消除大腿多余脂肪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/6/27/n12215620.md#1">橙县大公园运动场开放 足球队恢复训练</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/1/n12225212.md#1">久咳、爬坡喘当心肺纤维化 医师教你保养肺功能</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/2/n12226219.md#1">医师推荐增肌运动前3名 强身、增骨密度</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12247498.md#1">每周2次侧躺抬腿 消除大腿多余脂肪</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045158.md#1" target="_blank">《苦菜花》人物原型的真实人生（1）</a></li><li><a href="https://github.com/fobbte3722/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/9/12/n9623089.md#1" target="_blank">坚持在卢森堡公园炼功 法国法轮功学员谈感受</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/22/n11814019.md#1" target="_blank">夏林：中共是国民党大选惨败的根本原因</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11172214.md#1" target="_blank">只做了这一件事 他们绝处逢生（一）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12250828.md#1">触目惊心 中储粮直属库再曝“硕鼠”事件</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12250255.md#1">分散三倍券领取人潮 延迟领券有优惠</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12251066.md#1">东莞海滩惊现上万猪脚和内脏 遍布海岸线</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12250760.md#1">班农：多名中国病毒专家出逃 真相会惊世人</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12251145.md#1">纳瓦罗：美将对微信和TikTok采取强有力行动</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12250927.md#1">中共广电总局新增20条禁令 杜汶泽发文嘲讽</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/10/n12247809.md#1">澳洲延长港人签证 杜汶泽赞：明智之举</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/11/n12248215.md#1">《不死军团》影评：特殊的天赋 也可能招来麻烦</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12250791.md#1">无惧恶法吁市民投票 叶德娴：港人心未死</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12251164.md#1">林志玲登台北电影奖 事先不透风获赞超暖心</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/5/20/n12122697.md#1">高鹗补红楼之年龄错谬及深度削弱</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/5/28/n12144105.md#1">【康熙大帝】毕生治河 天下安澜二十载</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/10/n12246373.md#1">只有江梅伴幽独——宋代闺秀词人孙道绚</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/7/12/n12249941.md#1">中国第一坝三门峡大坝悲歌 为何坝成即祸出？</a></li>
-<li><a href="https://github.com/fobbte3722/djy/blob/master/gb/20/6/29/n12219238.md#1">世界仅存的马毛编织工艺</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fobbte3722/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fobbte3722/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/14/n12253923.htm">疫情下宅家锻炼 跳绳深蹲燃脂塑身</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/14/n12253923.htm">疫情下宅家锻炼 跳绳深蹲燃脂塑身</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fobbte3722/djy/blob/master/gb/20/7/14/n12253923.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fobbte3722/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fobbte3722/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fobbte3722/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fobbte3722/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fobbte3722/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/7/14/n12253923.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
